# fastq-and-furious

./: .travis.yml  LICENSE  README.md  pyproject.toml  setup.py  tests.py
.github/workflows/: pythonpackage.yml  pythonpublish.yml  webpages.yml
data/: test.fq  test_longqualityheader.fq
doc/: conf.py  index.rst  installation.rst  requirements.txt  user-guide.rst
doc/_templates/: layout.html
docs/: base.css  index.html
docs/version/lgautier-patch-4/html/: .buildinfo  objects.inv  performance.html  search.html  searchindex.js  user-guide.html
docs/version/lgautier-patch-4/html/_static/: my-styles.css
docs/version/lgautier-patch-5/html/: genindex.html  index.html  installation.html  performance.html  search.html  user-guide.html
docs/version/master/html/: .buildinfo  genindex.html  index.html  installation.html  objects.inv  performance.html  search.html  searchindex.js  user-guide.html
docs/version/master/html/_sources/: index.rst.txt  installation.rst.txt  performance.rst.txt  user-guide.rst.txt
docs/version/master/html/_static/: bizstyle.js
docs/version/use-pyproject/html/_sources/: index.rst.txt
src/: _fastqandfurious.c  fastqandfurious.py
src/demo/: benchmark.py
