[build-system]
requires = [
    "setuptools >= 61",
    "wheel",
    "packaging;platform_system=='Windows'",
]
build-backend = "setuptools.build_meta"

[project]
name = "fastq-and-furious"
version = "0.3.4"
description = "Performant handling of FASTQ files"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
authors = [{ name = "Laurent Gautier", email = "lgautier@gmail.com" }]
classifiers = [
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: MIT License',
    'Operating System :: POSIX :: Linux',
    'Programming Language :: C++',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Topic :: Scientific/Engineering',
]
dependencies = [
]

[project.optional-dependencies]
test = ["pytest", "coverage", "pytest-cov"]
demo = ["ngs_plumbing", "screed", "biopython", "pyfastx"]

[project.urls]
Homepage = "https://lgautier.github.io/fastq-and-furious"
Documentation = "https://lgautier.github.io/fastq-and-furious/version/master/html/index.html"
Source = "https://github.com/lgautier/fastq-and-furious"
Tracker = "https://github.com/lgautier/fastq-and-furious/issue"

[tool.setuptools]
packages = [
    "fastqandfurious",
    "fastqandfurious.demo"
]
# zip_safe = false # not supported as of setuptools==62.3.2
